Roll third_party/inspector_protocol to efefa86c3183d307f0a0e53bf568fe57c5b58849

This roll includes:
  - [inspector_protocol] added StringUtil::toDouble method as requirement [1]

[1] https://codereview.chromium.org/2843223005/

BUG=712610
R=dgozman@chromium.org

Review-Url: https://codereview.chromium.org/2846113002
Cr-Commit-Position: refs/heads/master@{#467878}

Former-commit-id: 3b3ae152b652a7a4240954a07172bd57bdd64a00