content/browser/devtools/protocol_string.h
@@ -52,6 +52,11 @@ class CONTENT_EXPORT StringUtil {
       s = "0" + s;
     return s;
   }
+  static double toDouble(const char* s, size_t len, bool* ok) {
+    double v = 0.0;
+    *ok = base::StringToDouble(std::string(s, len), &v);
+    return *ok ? v : 0.0;
+  }
   static size_t find(const String& s, const char* needle) {
     return s.find(needle);
   }
